Se agregan nuevos estilos y se cambia el nombre del pokemon

--- a/src/sass/Card.scss
+++ b/src/sass/Card.scss
@@ -32,6 +32,11 @@
         position: absolute;
         top: 56px;
         left: 24px;
-        z-index: -1;
+        // z-index: -1;
+    }
+
+    &__img{
+        position: absolute;
+        z-index: 1;
     }
 }   
